# MyGame

./: .gitignore  CMakeLists.txt  README.md
android-project/: gradle.properties  local.properties
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/assets/res/: level.txt
android-project/app/src/main/assets/res/shaders/: imgui_fragment_shader.txt  imgui_vertex_shader.txt  morphing_fragment_shader.txt
android-project/app/src/main/java/SuperTanksGame/: MyGame.java
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
android-project/app/src/main/res/values/: strings.xml
engine/glad/: glad.c  glad.h
engine/include/: engine.hpp  my_audio.hpp  my_math.hpp  picopng.hpp
engine/src/: engine.cpp
game/: animation.hpp  enemy.cpp  game.cpp  missile.hpp  object.hpp  tank.cpp  tank.hpp
game/include/: animation.hpp  missile.hpp  morphing.hpp  object.hpp  tank.hpp
game/src/: animation.cpp  enemy.cpp  game.cpp  missile.cpp  object.cpp  tank.cpp
res/: level.txt
res/shaders/: line_fragment_shader.txt  line_vertex_shader.txt  main_fragment_shader.txt  main_vertex_shader.txt  morphing_vertex_shader.txt  vertex_shader.txt
